--- a/src/main/webapp/templates/sign_in.html
+++ b/src/main/webapp/templates/sign_in.html
@@ -14,20 +14,17 @@
     <title>Weather</title>
 </head>
 <body>
+
 <header th:replace="components/header :: header(${username}, ${search_query})"></header>
 
 <div class="container border d-flex flex-column align-items-center p-4" style="width: 400px; border-radius: 15px;">
-    <h2 class="fw-bold display-6 mb-3">Sign Up</h2>
+    <h2 class="fw-bold display-6 mb-3">Sign In</h2>
 
-    <form action="/sign-up" class="w-100 f-flex align-items-center flex-column" method="post">
+    <form action="/sign-in" class="w-100 f-flex align-items-center flex-column" method="post">
         <div class="mb-3">
             <label class="form-label ms-2" for="username">Username</label>
-            <input class="form-control border-0 bg-light rounded-pill py-2" id="username" name="username"
-                   placeholder="Your username"
+            <input class="form-control border-0 bg-light rounded-pill py-2" id="username" name="username" placeholder="Your username"
                    required type="text">
-            <p class="w-100 text-danger text-end m-0"
-               th:if="${error != null and error.class.name == 'com.bahmet.weatherviewer.exception.UserExistsException'}"
-               th:text="${error.message}"></p>
         </div>
 
         <div class="mb-4">
@@ -36,13 +33,13 @@
                    placeholder="Your password" required type="password">
         </div>
 
-
         <div class="d-flex align-items-center justify-content-between flex-column">
-            <button class="btn btn-primary w-50 fw-bold rounded-pill mb-1" type="submit">Sign up</button>
-            <a class="w-50 align-items-center text-center" href="/sign-in">Already signed up?</a>
+            <button class="btn btn-primary w-50 fw-bold rounded-pill mb-1" type="submit">Sign in</button>
+            <a class="w-50 align-items-center text-center" href="/sign-up">Don't have an account?</a>
         </div>
     </form>
 </div>
+
 
 <script crossorigin="anonymous"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
